Fixed bootsrap path and removed bootstrap fonts from cdn

--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -1,5 +1,5 @@
 // Lib import
-@import "../lib/bootstrap/dist/css/bootstrap.css";
+@import "../lib/bootstrap/dist/css/bootstrap";
 
 // App import
 @import "colors";
