--- a/dev/app/portfolio/styles.scss
+++ b/dev/app/portfolio/styles.scss
@@ -1,3 +1,18 @@
 .portfolio-item {
-  min-height: 300px;
+  border-left: 30px solid #FFF;
+  border-right: 30px solid #FFF;;
+  border-bottom: 30px solid #FFF;
+  .img-container {
+    border: 1px solid #333;
+    height: 300px;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.5);
+    img {
+      width: 100%;
+    }
+  }
+
+  .img-container:hover {
+    background-color: #FFF;
+  }
 }
