--- a/dev/app/contact/styles.scss
+++ b/dev/app/contact/styles.scss
@@ -3,31 +3,14 @@
   a {
     color: #333;
   }
-  .contact-info {
-    list-style: none;
-    font-size: 18px;
-
-    li {
-      margin-bottom: 17px;
-    }
-
-    i {
-      position: relative;
-      top: 2px;
-      text-align: center;
-      width: 45px;
-      font-size: 20px;
-    }
-    .nodisplay {
-      visibility: hidden;
-    }
-  }
 
   $linkedin-color: #4498C8;
   $facebook-color: #305891;
   $twitter-color: #2CA8D2;
   $stackoverflow-color: #FCA733;
   $github-color: #000000;
+  $skype-color: #00AFF0;
+  $email-color: #00658B;
 
   .social {
     list-style: none;
@@ -39,7 +22,7 @@
     }
 
     li {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       font-size: 18px;
       cursor: pointer;
     }
@@ -72,5 +55,12 @@
     i.fa-github-alt {
       background-color: $github-color;
     }
+    i.fa-skype {
+      background-color: $skype-color;
+    }
+    i.fa-at {
+      background-color: $email-color;
+    }
+
   }
 }
