Removed the border

--- a/dev/app/menu/styles.scss
+++ b/dev/app/menu/styles.scss
@@ -24,7 +24,7 @@ nav.not-at-top.navbar {
     top: 0px;
   }
   background-color: #FFF;
-  border-bottom:1px solid #999;
+  //border-bottom:1px solid #999;
   -webkit-transition: border-bottom-color 2s, background-color $background-transition;
   transition: border-bottom-color 2s, background-color $background-transition;
 }
