--- a/dev/app/styles.scss
+++ b/dev/app/styles.scss
@@ -32,14 +32,24 @@ div:focus {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+.bg-dark-transparent {
+  background-color: rgba(0, 0, 0, 0.6);
+
+  h3 {
+    color: #FFF;
+  }
+}
+
 .section {
   .section-header {
     text-align: center;
     font-family: 'Questrial', sans-serif;
-    padding: 70px 0 90px 0;
+    font-family: "Lato";
+    padding: 60px 0 80px 0;
 
     h3 {
-      font-size: 40px;
+      //font-weight:bold;
+      font-size: 70px;
     }
   }
 }
