--- a/dev/app/cv/styles.scss
+++ b/dev/app/cv/styles.scss
@@ -1,3 +1,80 @@
 .cv {
+  .cv-category {
+    font-size:18px;
+    text-transform: uppercase;
+    display: inline-block;
+    cursor: pointer;
+    margin: 3px 10px;
+    padding: 2px 10px;
+    border-radius: 3px;
+    border: 1px solid rgba(0, 0, 0, 0);
 
+    @media(max-width: $screen-sm) {
+      font-size:12px;
+      margin: 3px 3px;
+    }
+  }
+  .cv-category.selected {
+    border: 1px solid $cv-color;
+    background-color: $cv-color;
+    color: #FFF;
+  }
+  .cv-category.selected:hover {
+    color: #FFF;
+  }
+
+  .cv-category:hover {
+    border: 1px solid $cv-color;
+    color: $cv-color;
+  }
+
+  .cv-category:last-child:after {
+    content: "";
+  }
+
+  .skill-category {
+    p {
+      text-transform: uppercase;
+      font-weight:bold;
+      font-size:18px;
+      margin-top:30px;
+      color: #3C4251;
+    }
+    ul {
+      padding-left: 15px;
+      list-style-type: none;
+
+      li {
+        transition: all linear 0.4s;
+      }
+
+    }
+    margin-bottom:10px;
+
+    .skill-icon {
+      display: inline-block;
+
+      img {
+        height: 30px;
+        border-radius: 3px;
+        margin: 6px 10px 6px 0;
+        transition: all linear 0.4s;
+      }
+      .caption {
+        text-align: center;
+        font-size:0px;
+      }
+    }
+
+    img.inactive {
+        -webkit-filter: grayscale(100%) opacity(20%);
+        filter: grayscale(100%) opacity(20%);
+    }
+  }
+
+  .skills-container {
+    position: relative;
+  }
+
+  @include header-color($cv-color);
 }
