--- a/dev/app/footer/styles.scss
+++ b/dev/app/footer/styles.scss
@@ -1,15 +1,16 @@
 .footer {
   background-color: #fff;
-  padding: 50px 0;
+  padding: 23px 0;
 
   a {
+    color: #333;
     cursor: pointer;
     font-size: 16px;
     text-transform: uppercase;
   }
 
   p {
-    margin-top: 15px;
+    margin-top: 5px;
     font-size:12px;
   }
   span.separator {
@@ -18,6 +19,16 @@
     font-size:18px;
     position: relative;
     top: -1px;
-    color: #428bca;
+    color: #333;
+  }
+
+  @media (max-width: $screen-xs) {
+    a {
+      font-size:12px;
+    }
+    span.separator {
+      margin: 0 4px;
+      font-size:12px;
+    }
   }
 }
