--- a/dev/app/main/styles.scss
+++ b/dev/app/main/styles.scss
@@ -1,49 +1,72 @@
-//@import "../dev/lib/bootstrap/dist/css/bootstrap.scss";
+#header {
+  .header {
+    min-height:100%;
+    height: 100%;
 
-.header {
-  background-color: rgba(255, 255, 255, 0.5);
-  min-height:100%;
-  height: 100%;
+    .photo {
+      margin-bottom:10px;
+      width: 150px;
+      border-radius: 50%;
+      border: 2px solid #FFF;
+    }
 
-  .photo {
-    margin-bottom:10px;
-    width: 150px;
-    //border-radius: 50%;
-    border: 2px solid #FFF;
-  }
-  .header-text {
-    margin-left: 280px;
-  }
+    h1 {
+      font-family:Questrial;
+      font-size: 40px;
 
+    }
 
-  h1 {
-    font-family:Questrial;
-    font-size: 40px;
-  }
-
-  h2 {
-    font-family: Raleway;
-    margin: 14px 0;
-    font-size:23px;
-  }
-}
-
-.menu-down {
-  position: relative;
-  bottom: 130px;
-  text-align: center;
-  font-size: 35px;
-
-  i {
-    cursor: pointer;
-    color: #777;
-    border-radius: 4px;
-    padding: 5px 20px;
-    border: 1px solid #333;
-    background-color: rgba(255, 255, 255, 0.5);
+    h2 {
+      font-family: Raleway;
+      margin: 14px 0;
+      font-size:23px;
+    }
   }
 
-  i:hover {
-    background-color: rgba(255, 255, 255, 0.9);
+  .header-container {
+    margin-bottom:100px;
+  }
+
+  .menu-down {
+    position: relative;
+    bottom: 80px;
+    text-align: center;
+    font-size: 35px;
+
+    i {
+      cursor: pointer;
+      color: #777;
+      border-radius: 4px;
+      padding: 5px 20px;
+      border: 1px solid #333;
+      background-color: rgba(255, 255, 255, 0.5);
+    }
+
+    i:hover {
+      background-color: rgba(255, 255, 255, 0.9);
+    }
+  }
+
+  @media (max-width: $screen-sm) {
+    .header {
+      .photo {
+        width: 100px;
+      }
+      h1 {
+        font-size: 30px;
+      }
+      h2 {
+        font-size: 18px;
+      }
+    }
+    .header-container {
+      margin-bottom:30px;
+    }
+    .menu-down {
+      font-size: 25px;
+      i {
+        padding: 5px 15px;
+      }
+    }
   }
 }
