Removed inline styles

--- a/dev/app/menu/styles.scss
+++ b/dev/app/menu/styles.scss
@@ -1,87 +1,95 @@
-
 menu {
-  margin:0;
-  padding:0;
+  @mixin menu-style($color, $fill-color, $toggle-color, $toggle-fill, $menu-fill, $menu-text-color) {
+    ul.navbar-right {
+      li {
+        a, a:focus {
+          border-radius: 3px;
+          cursor: pointer;
+          background-color: $fill-color;
+          color: $color;
+          text-transform: uppercase;
+          padding: 5px 10px;
+          margin: 10px;
+          border: 1px solid rgba(0, 0, 0, 0);
+        }
+        a:hover, a.active {
+          text-decoration: none;
+          background-color: $fill-color;
+          color: $color;
+          border-color: $color;
+        }
+      }
+    }
+    .navbar-toggle {
+      background-color: #FFF;
+      border-color: $toggle-color;
+
+      span.icon-bar {
+        background-color: $toggle-color;
+      }
+    }
+    .navbar-toggle:focus {
+      background-color: #FFF;
+    }
+    @media(max-width: $screen-lg) {
+      .navbar-collapse {
+        transition: background-color .4s linear;
+        background-color: $menu-fill;
+        border-bottom: 1px solid #FFF;
+        top: -52px;
+        position: relative;
+      }
+      ul.navbar-right {
+        margin-top: 3px;
+        margin-bottom:3px;
+        li {
+          a, a:focus {
+            max-width: 70%;
+            border-width: 0;
+            background-color: transparent;
+            color: $menu-text-color;
+          }
+          a:hover, a.active {
+            border-width: 0;
+            color: $toggle-color;
+            background-color: #FFF;
+          }
+        }
+      }
+    }
+  }
+
+  @mixin menu-border($color) {
+    @include menu-style($color, #FFF, $color, #FFF, $color, #FFF);
+  }
+
+  .navbar-toggle {
+    z-index: 999;
+  }
+
+  nav.navbar.navbar-default {
+    margin-bottom: 0;
+    border: none;
+    background-color: transparent;
+  }
+
+  .menu-portfolio {
+    @include menu-border($portfolio-color);
+  }
+  .menu-cv {
+    @include menu-border($cv-color);
+  }
+  .menu-contact {
+    @include menu-border($contact-color);
+  }
+  .menu-info {
+    @include menu-style(#FFF, $info-color, $info-color, #FFF, $info-color, #FFF);
+  }
+  .menu-header {
+    @include menu-style(#333, rgba(0, 0, 0, 0), #777, rgba(0, 0, 0, 0), #FFF, #333);
+    .navbar-toggle.collapsed {
+      background-color: transparent;
+      border-color: transparent;
+    }
+  }
 }
-
-$brand-transition: 1s;
-$background-transition: 1s;
-
-nav.at-top {
-  .navbar-brand {
-    top: -100px;
-    -webkit-transition: top $brand-transition ease-out;
-    transition: top $brand-transition ease-out;
-  }
-  -webkit-transition: border-bottom-color 2s, background-color $background-transition ease-out;
-  transition: border-bottom-color 2s, background-color $background-transition ease-out;
-}
-
-nav.not-at-top.navbar {
-  .navbar-brand {
-    -webkit-transition: top $brand-transition;
-    transition: top $brand-transition;
-    top: 0px;
-  }
-  background-color: #FFF;
-  //border-bottom:1px solid #999;
-  -webkit-transition: border-bottom-color 2s, background-color $background-transition;
-  transition: border-bottom-color 2s, background-color $background-transition;
-}
-
-nav.navbar {
-  padding-right:30px;
-  padding-left:10px;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin-bottom: 0;
-  border: none;
-  //border-bottom:0px solid rgba(255, 255, 255, 0);
-
-  position: fixed;
-  width: 100%;
-  border-radius: 0;
-  z-index:99;
-  text-transform: uppercase;
-  color: #333;
-
-
-  .photo-thumb {
-    width: 35px;
-    position: relative;
-    float: left;
-    top: -7px;
-    left: -5px;
-    border-radius: 3px;
-    margin-right: 10px;
-  }
-
-  a {
-    font-weight:bold;
-    text-transform: uppercase;
-    color: #333;
-  }
-  a:hover {
-    color: #333;
-    text-decoration: none;
-    border: 1px solid #333;
-    border-radius: 3px;
-  }
-  a.active {
-    border: 1px solid #333;
-    border-radius: 3px;
-  }
-
-  .navbar-brand {
-    font-family:'Questrial', sans-serif;
-    position: relative;
-    font-size: 18px;
-    cursor: pointer;
-    text-transform: none;
-  }
-
-  .navbar-brand:hover {
-    border: 0px solid #333;
-    border-radius: 3px;
-  }
-}
-
