--- a/dev/scss/_colors.scss
+++ b/dev/scss/_colors.scss
@@ -14,3 +14,27 @@ $warning:   #F0AD4E;
 $alert:     #D9534F;
 $default:      #777777;
 $primary:   #337AB7;
+
+// colors
+
+$main-text: #7f8c97; // main text
+$link: #acb7c0; // anchor tags
+$background: #e9f0f5; // body background color
+
+$color-1: #303e49; // blue dark
+$color-2: #c03b44; // red
+$color-3: #ffffff; // white
+$color-4: #75ce66; // green
+$color-5: #f0ca45; // yellow
+
+
+//$contact-color: #CC333F;
+//$cv-color: #F0AD4E;
+//$portfolio-color: #EB6841;
+//$info-color: #37B4C1;
+
+$contact-color: #CC333F;
+$cv-color: #37B4C1;
+$portfolio-color: #37B4C1;
+$info-color: #F8CA00;
+$info-color: #556270;
